Issues #451 and #452 - flood tool fixes on mobile

--- a/src/styles/less/floodtools.less
+++ b/src/styles/less/floodtools.less
@@ -972,13 +972,17 @@
     border-top-left-radius: 5px;
     box-shadow: 0px 6px 35px -10px rgba(20, 20, 40, 0.6) !important;
     display: flex !important;
-    bottom: -200px;
+    bottom: -240px;
     transition: all 0.2s ease;
 
     
     &.visible{
         bottom: 45px;
-        transition: all 0.2s ease;
+		transition: all 0.2s ease;
+		
+		@media (max-width: 767px) {
+			bottom: 0px;
+		}
     }
 
     .header{
